@@ -4,7 +4,7 @@ Nagios Core 4 Change Log
 
 x.x.x - xxxx-xx-xx
 ------------------
-FIXED
+FIXES
 * Every 15sec /var/log/messages is flooded with "nagios: set_environment_var" (John Frickson)
 * Changed release date to ISO format (yyyy-mm-dd) (John Frickson)
 * `make all` fails if unzip is not installed (John Frickson)
@@ -19,6 +19,9 @@ FIXED
 * Wildcard searching causes service status links to not work properly (John Frickson)
 * Quick search with no hits shows a permission denied error (John Frickson)
 # Setting a service as its own parent is not caught by the sanity checker (-v) and causes a segfault (John Frickson)
+
+ENHANCEMENTS
+* new status for check dependencies (John Frickson)
 
 
 4.3.1 - 2017-02-23
